{{$NEXT}}

0.000124  2019-08-16 14:54:25-07:00 America/Los_Angeles

    - Make Times plugin use INFO facets for display

0.000123  2019-08-16 13:21:29-07:00 America/Los_Angeles

    - Fix double-load bug on Plugin::Times

0.000122  2019-05-18 08:21:20-07:00 America/Los_Angeles

    - Fix diag issues with ClassicCompare

0.000121  2019-05-07 12:00:27-07:00 America/Los_Angeles

    - Tracking for mocked methods
    - Include raw table in facet data when compare fails

0.000120  2019-04-26 05:19:18-07:00 America/Los_Angeles

    - Allow all_items inside bag

0.000119  2019-03-16 15:17:33-07:00 America/Los_Angeles

    - Allow meta-checks in bag/array/hash (Thanks jjatria)

0.000118  2019-01-18 13:44:06-08:00 America/Los_Angeles

    - Fix typo Test::Workflow -> Test2::Workflow #170
    - Fix test broken by new Test-Simple #175

0.000117  2018-12-04 11:37:15-08:00 America/Los_Angeles

    - Remove test that belongs in another dist

0.000116  2018-11-28 15:47:12-08:00 America/Los_Angeles

    - Add 'set' to mock tools
    - Fix 'overload' issue in deep check cycle detection.
    - Minor updates

0.000115  2018-07-11 09:39:37-07:00 America/Los_Angeles

    - Fix warning on undefined note/diag
    - Improve an error message.

0.000114  2018-04-19 08:39:56-07:00 America/Los_Angeles

    - Fix missing manual section

0.000113  2018-04-19 08:03:42-07:00 America/Los_Angeles

    - Fix typo

0.000112  2018-04-19 07:15:40-07:00 America/Los_Angeles

    - Switch spec to use the testing_done callback
    - Update copyright dates
    - Finish the Anatomy manual section
    - Finish the Tooling manual section

0.000111  2018-03-14 12:37:45-07:00 America/Los_Angeles

    - No Changes since last trial

0.000110  2018-03-13 13:36:37-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Allow events from unattached processes in AsyncSubtest

0.000109  2018-03-12 13:20:18-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add AsyncSubtest retrieval to hubs
